# stock_bot

./: .gitignore  README.md  pyproject.toml
stock_bot/: bot.py  config.py  db.py  db_handler.py  handlers.py  models.py  notification_handler.py  scraper.py  transaction_handler.py
tests/: test_scaper.py
